--- a/org/2022-01-05-UGUI-Source-Reading-02.org
+++ b/org/2022-01-05-UGUI-Source-Reading-02.org
@@ -1,4 +1,4 @@
-#+TITLE: UGUI源码分析(一): Mask的背后
+#+TITLE: UGUI源码分析(一): Mask 面具🎭之下
 #+HUGO_TAGS: Unity UGUI
 #+HUGO_CATEGORIES: UGUI源码分析
 #+DATE: 2022-01-05T22:12:45+08:00
@@ -18,7 +18,7 @@
 * Mask相关的类
 =Mask= 相关的类和属性如下:
 
-#+BEGIN_SRC plantuml :file 2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-003.Mask-Hierarchy.png :exports both :cache yes 
+#+BEGIN_SRC plantuml :file 2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-012.Mask-Hierarchy.png :exports both :cache yes 
   @startuml
 
   class Mask
@@ -43,6 +43,7 @@
   abstract class MaskableGraphic
   {
       # bool m_ShouldRecalculateStencil
+      + bool isMaskingGraphic
   }
 
   interface IMaterialModifier
@@ -50,18 +51,88 @@
       Material GetModifierMaterial()
   }
 
+  interface IMaskable
+  {
+       void RecalculateMasking()   
+  }
+
   UIBehaviour <|-- Mask
 
   Graphic         <|-- MaskableGraphic
   MaskableGraphic <|-- Image
 
+  IMaskable         <|.. MaskableGraphic
   IMaterialModifier <|.. MaskableGraphic
   IMaterialModifier <|.. Mask
   @enduml
 #+END_SRC
 
-#+RESULTS[40c389bff6f9243c7b7fa0b490a7d72513527977]:
-[[file:2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-003.Mask-Hierarchy.png]]
+#+RESULTS[5b26384d9d5468a9e13e482e92d29ca59e7595fe]:
+[[file:2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-012.Mask-Hierarchy.png]]
+
+* 一个Demo
+我们使用下面两张图来演示 =Mask= 的效果. 
+
+[[file:2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-014.Mask-Red-Hole.png]]
+[[file:2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-013.Mask-Blue.png]]
+
+我们新建两个 Image 控件, 分别使用这两张图做Sprite, 蓝色控件作为子对象, 并且给红色控件添加 =Mask= 组件.
+
+我们得到如下图效果, 我们看到了蓝色图片, 但按照红色图片的形状显示.
+
+[[file:2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-015.Mask-Scene-Blue-Hole.png]]
+
+* Mask的面具之下
+我们可以在Inspector里观察下, 禁用和启用 =Mask= 组件, 对 Image 控件使用材质的影响.
+
+[[file:2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-016.Mask-Red-Disable.png]]
+[[file:2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-017.Mask-Red-Enable.png]]
+
+可以看到禁用 =Mask= 组件后, 使用的是 =Default UI Material=, 启用之后使用的材质被修改. 同时, 也能发现
+子对象的材质也被修改.
+
+我们打开 =Runtime/UI/Core/Mask.cs=, 并找到 =OnEnable= 方法代码如下:
+#+begin_src csharp
+  protected override void OnEnable()
+  {
+      base.OnEnable();
+      if (graphic != null)
+      {
+          graphic.canvasRenderer.hasPopInstruction = true;
+          graphic.SetMaterialDirty();
+
+          // Default the graphic to being the maskable graphic if its found.
+          if (graphic is MaskableGraphic)
+              (graphic as MaskableGraphic).isMaskingGraphic = true;
+      }
+
+      MaskUtilities.NotifyStencilStateChanged(this);
+  }
+#+end_src
+
+可以看到如果 =graphic is MaskableGraphic= 就设置 =isMaskingGraphic= 为 =true= , 这里的 =graphic=, 实际上就
+是红色Image的 =Image= 组件.
+
+然后调用了 =MaskUtilities.NotifyStencilStateChanged(this)=, 我们打开其实现.
+#+begin_src csharp
+  public static void NotifyStencilStateChanged(Component mask)
+  {
+      var components = ListPool<Component>.Get();
+      mask.GetComponentsInChildren(components);
+      for (var i = 0; i < components.Count; i++)
+      {
+          if (components[i] == null || components[i].gameObject == mask.gameObject)
+              continue;
+
+          var toNotify = components[i] as IMaskable;
+          if (toNotify != null)
+              toNotify.RecalculateMasking();
+      }
+      ListPool<Component>.Release(components);
+  }
+#+end_src
+
+从上面这段代码中可以看到
 
 
 * 参考
