--- a/org/2022-01-05-UGUI-Source-Reading-02.org
+++ b/org/2022-01-05-UGUI-Source-Reading-02.org
@@ -48,7 +48,7 @@
 
   interface IMaterialModifier
   {
-      Material GetModifierMaterial()
+      Material GetModifiedMaterial()
   }
 
   interface IMaskable
@@ -67,8 +67,9 @@
   @enduml
 #+END_SRC
 
-#+RESULTS[d1d81021e3e11834454b31ff0b0f86f5d0546e76]:
+#+RESULTS[d6d40f7ccd30cbc3aefd900e15d46e8f469ac179]:
 [[file:2021-12-UGUI-Source-Reading/2021-12-UGUI-Source-Reading-012.Mask-Hierarchy.png]]
+
 
 * 一个Demo
 我们使用下面两张图来演示 =Mask= 的效果. 
@@ -150,7 +151,142 @@
 
 这里主要是将 =m_ShouldRecalculateStencil= 置为 true.
 
+此时, 我们依然没有看到对材质的修改. 材质的修改在什么地方呢? 还记得[[https://www.young40.com/post/2021-12-26-ugui-source-reading-01/][上篇]] 中提到的 =Graphic.materialForRendering= 可能对
+材质进行修改吗? 是的, 材质就是在这里通过 =IMaterialModifier= 接口的 =GetModifiedMaterial= 方法来实现的.
+
+=Mask= 组件和 =MaskableGraphic= 都实现了 =IMaterialModifier= 接口, 我们先看下 =Mask= 的 =GetModifiedMaterial= 方法:
+#+begin_src csharp
+  public virtual Material GetModifiedMaterial(Material baseMaterial)
+  {
+      if (!MaskEnabled())
+          return baseMaterial;
+
+      var rootSortCanvas = MaskUtilities.FindRootSortOverrideCanvas(transform);
+      var stencilDepth = MaskUtilities.GetStencilDepth(transform, rootSortCanvas);
+      if (stencilDepth >= 8)
+      {
+          Debug.LogWarning("Attempting to use a stencil mask with depth > 8", gameObject);
+          return baseMaterial;
+      }
+
+      int desiredStencilBit = 1 << stencilDepth;
+
+      // if we are at the first level...
+      // we want to destroy what is there
+      if (desiredStencilBit == 1)
+      {
+          var maskMaterial = StencilMaterial.Add(baseMaterial, 1, StencilOp.Replace, CompareFunction.Always, m_ShowMaskGraphic ? ColorWriteMask.All : 0);
+          StencilMaterial.Remove(m_MaskMaterial);
+          m_MaskMaterial = maskMaterial;
+
+          var unmaskMaterial = StencilMaterial.Add(baseMaterial, 1, StencilOp.Zero, CompareFunction.Always, 0);
+          StencilMaterial.Remove(m_UnmaskMaterial);
+          m_UnmaskMaterial = unmaskMaterial;
+          graphic.canvasRenderer.popMaterialCount = 1;
+          graphic.canvasRenderer.SetPopMaterial(m_UnmaskMaterial, 0);
+
+          return m_MaskMaterial;
+      }
+
+      //otherwise we need to be a bit smarter and set some read / write masks
+      var maskMaterial2 = StencilMaterial.Add(baseMaterial, desiredStencilBit | (desiredStencilBit - 1), StencilOp.Replace, CompareFunction.Equal, m_ShowMaskGraphic ? ColorWriteMask.All : 0, desiredStencilBit - 1, desiredStencilBit | (desiredStencilBit - 1));
+      StencilMaterial.Remove(m_MaskMaterial);
+      m_MaskMaterial = maskMaterial2;
+
+      graphic.canvasRenderer.hasPopInstruction = true;
+      var unmaskMaterial2 = StencilMaterial.Add(baseMaterial, desiredStencilBit - 1, StencilOp.Replace, CompareFunction.Equal, 0, desiredStencilBit - 1, desiredStencilBit | (desiredStencilBit - 1));
+      StencilMaterial.Remove(m_UnmaskMaterial);
+      m_UnmaskMaterial = unmaskMaterial2;
+      graphic.canvasRenderer.popMaterialCount = 1;
+      graphic.canvasRenderer.SetPopMaterial(m_UnmaskMaterial, 0);
+
+      return m_MaskMaterial;
+  }
+#+end_src
+
+这段代码的逻辑比较简单, 首先计算了当前对象到所在 =Canvas= 的模版深度, 即其所有父对象中拥有 =Mask= 组件的数量.
+
+利用其模板深度做位运算, 计算出掩码值. 然后利用 =StencilMaterial.Add= 修改材质. 我们查看下其源代码, 替换材质部分核心源码如下:
+#+begin_src csharp
+  newEnt.customMat.SetFloat("_Stencil", (float)stencilID);
+  newEnt.customMat.SetFloat("_StencilOp", (float)operation);
+  newEnt.customMat.SetFloat("_StencilComp", (float)compareFunction);
+  newEnt.customMat.SetFloat("_StencilReadMask", (float)readMask);
+  newEnt.customMat.SetFloat("_StencilWriteMask", (float)writeMask);
+#+end_src
+
+要结合着 Shader 部分的代码一起来看, 可以在 =UI-Default.shader= 中找到模板相关代码如下:
+#+begin_src glsl
+  Properties
+  {
+      _StencilComp ("Stencil Comparison", Float) = 8
+      _Stencil ("Stencil ID", Float) = 0
+      _StencilOp ("Stencil Operation", Float) = 0
+      _StencilWriteMask ("Stencil Write Mask", Float) = 255
+      _StencilReadMask ("Stencil Read Mask", Float) = 255
+
+      _ColorMask ("Color Mask", Float) = 15
+  }
+
+  SubShader
+  {
+    Stencil
+    {
+        Ref [_Stencil]
+        Comp [_StencilComp]
+        Pass [_StencilOp]
+        ReadMask [_StencilReadMask]
+        WriteMask [_StencilWriteMask]
+     }
+  }
+#+end_src
+
+意味着实际上是通过控制Shader中 =Stencil= 配置, 来达到写入模版值或者模版测试的目的.
+
+下面这段代码的 =Stencil= 的配置为:
+#+begin_src csharp
+StencilMaterial.Add(baseMaterial, 1, StencilOp.Replace, CompareFunction.Always, m_ShowMaskGraphic ? ColorWriteMask.All : 0);
+#+end_src
+
+#+begin_src glsl
+  Stencil {
+    Ref 1
+    Comp Always
+    Pass Replace
+    ReadMask 255
+    WriteMask 255
+  }
+
+#+end_src
+
+这段配置的含义是, 将参考值 1 写入模板缓冲区.
+
+下面这段代码的 =Stencil= 的配置为:
+#+begin_src csharp
+ StencilMaterial.Add(baseMaterial, 1, StencilOp.Zero, CompareFunction.Always, 0); 
+#+end_src
+
+#+begin_src glsl
+  Stencil {
+    Ref 1
+    Comp Always
+    Pass Zero
+    ReadMask 255
+    WriteMask 255
+  }
+#+end_src
+
+这段配置的含义是 将参考值 0 写入模板缓冲区(Pass Zero的含义如此, 应该是会忽略其他配置).
+这个材质被 =canvasRenderer.SetPopMaterial= 调用, 具体源码在Unity的C++部分, 各种资料也语焉不详, 但作用是清空了模板缓存.
+
+我们在上面看到了 =Mask= 组件, 写入和
+
+
+
 
 
 * 参考
   * https://www.cnblogs.com/iwiniwin/p/15131528.html
+  * https://learnopengl-cn.readthedocs.io/zh/latest/04%20Advanced%20OpenGL/02%20Stencil%20testing/
+  * https://docs.unity3d.com/cn/2019.4/Manual/script-Mask.html
+  * https://docs.unity3d.com/cn/2021.2/Manual/SL-Stencil.html
