--- a/org/2022-01-12-3D-Math-01.org
+++ b/org/2022-01-12-3D-Math-01.org
@@ -7,7 +7,22 @@
 #+HUGO_BASE_DIR: ../
 #+OPTIONS: author:nil
 
+* 数字
+ * 自然数: 零和正整数
+ * 整数
+ * 有理数: 整数和分数
+ * 无理数: 无限不循环小数
+ * 实数: 有理数, 无理数
+ * 复数
 * 游戏中的坐标系
 ** 笛卡尔坐标系
-** 极坐标
-** 笛卡尔坐标和极坐标的转换
+*** 坐标系等价性
+ * 2D笛卡尔坐标系都是等价的
+ * 3D笛卡尔坐标系存在两种, 左手坐标系, 右手坐标系. 这两种坐标系不等价
+** 其他坐标系
+*** 2D极坐标
+*** 3D柱面坐标
+*** 3D球面坐标
+* 参考
+ * 3D游戏编程大师技巧 第四章
+ * 游戏引擎架构 第四章
