--- a/org/2022-01-12-3D-Math-01.org
+++ b/org/2022-01-12-3D-Math-01.org
@@ -23,6 +23,11 @@
 *** 2D极坐标
 *** 3D柱面坐标
 *** 3D球面坐标
+* 多坐标系
+ * 世界坐标系
+ * 物体坐标系
+ * 摄像机坐标系
+ * 惯性坐标系 从物体坐标系到惯性坐标系只需要旋转, 从惯性坐标系到世界坐标系只需要平移
 * 参考
  * 3D游戏编程大师技巧 第四章
  * 游戏引擎架构 第四章
