--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -85,8 +85,12 @@ Unity提供了多种旋转的Api, 其中由对象的transform提供的eulerAngle
 * 旋转的几种表示方法
 旋转有多种表示方法, 例如轴角法, 旋转矩阵, 欧拉角, 四元数, 游戏引擎中用到了多种旋转表示方法. 我们来看看这些不同表示方法之间的联系.
 
+** 轴角法
+
 ** 四元数
 Unity在引擎内部使用四元数存储旋转和方位, 在其文档中[fn:1]有明确指出.
+
+
 
 * 参考文档
 [fn:1] https://docs.unity3d.com/Manual/QuaternionAndEulerRotationsInUnity.html Rotation and orientation in Unity [Unity官方文档]
