--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -88,10 +88,17 @@ Unity提供了多种旋转的Api, 其中由对象的transform提供的eulerAngle
  * 和差化积公式
  * 半角/倍角公式
 
+** 坐标系与旋转正方向
+左手坐标系中采用左手法则确定旋转正方向, 右手坐标系采用右手法则确定旋转正方向. Unity中采用了左手坐标系, 因此我们下面提到的旋转都遵循左手法则.
+
 * 旋转的几种表示方法
 旋转有多种表示方法, 例如轴角法, 旋转矩阵, 欧拉角, 四元数, 游戏引擎中用到了多种旋转表示方法. 我们来看看这些不同表示方法之间的联系.
 
+** 旋转矩阵
+
 ** 轴角法
+
+** 欧拉角
 
 ** 四元数
 Unity在引擎内部使用四元数存储旋转和方位, 在其文档中[fn:1]有明确指出.
