--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -88,15 +88,21 @@ Unity提供了多种旋转的Api, 其中由对象的transform提供的eulerAngle
  * 和差化积公式
  * 半角/倍角公式
 
+** 二维空间旋转   
+二维空间中, 物体只能围绕某一个点旋转, 我们一般选择绕原点旋转.
+#+begin_quote
+之所以选择原点是因为我们总是可以对物体做平移操作, 先平移至原点, 旋转之后再平移回去.
+从数学上讲, 平移操作是非线形操作, 我们需要将二维空间升至三维空间做平移, 即引入齐次坐标.
+平移和旋转恰好可以互不影响地存在于升维后的矩阵中, 所以我们可以简便地采用以原点为中心点做旋转.
+#+end_quote
 ** 坐标系与旋转正方向
-左手坐标系中采用左手法则确定旋转正方向, 右手坐标系采用右手法则确定旋转正方向. Unity中采用了左手坐标系, 因此我们下面提到的旋转都遵循左手法则.
+在三维空间中, 左手坐标系中采用左手法则确定旋转正方向, 右手坐标系采用右手法则确定旋转正方向. Unity中采用了左手坐标系, 因此我们下面提到的旋转都遵循左手法则.
 
 * 旋转的几种表示方法
 旋转有多种表示方法, 例如轴角法, 旋转矩阵, 欧拉角, 四元数, 游戏引擎中用到了多种旋转表示方法. 我们来看看这些不同表示方法之间的联系.
 
 ** 旋转矩阵
 
-o
 ** 轴角法
 
 ** 欧拉角
