--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -119,8 +119,8 @@ window.onload = function() {applet.inject('ggbApplet')};
 $$
 R(\theta) = \begin{bmatrix}p' \\\ q' \\\ \end{bmatrix}
 = \begin{bmatrix}
-cos(\theta)  & sin(\theta) \\\
--sin(\theta) & cos(\theta) \\\
+cos(\theta)  & sin(\theta) \\
+-sin(\theta) & cos(\theta) \\
 \end{bmatrix}
 $$
 
