--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -169,9 +169,53 @@ cos(\theta)  & sin(\theta) & 0 \\
 $$
 
 ** 绕任意轴的旋转
+旋转也可以围绕任意的轴, 我们仍然不考虑平移的问题, 假设旋转轴通过原点.
 
 #+SOURCE: https://www.geogebra.org/calculator/tdqqruce
 [[file:2022-06/2022-06-Rotation-007.3D-Rotation-By-Any.png]]
+
+如上图所示, 向量 $v$ (米黄色)围绕单位向量 $n$ 旋转 \theta\deg, 得到新的向量 $v'$(土黄色). 
+$v$ 可以分解为和 $n$ 平行的和垂直的两个变量 $v_{\parallel}$ (红色), $v_{\perp}$(绿色), 既$v=v_{\parallel}+v_{\perp}$.
+旋转后 $v_{\parallel}$ 因为和 $n$ 平行不受影响, $v_{\perp}$ 变为 $v_{\perp}^{\prime}$.
+我们可以看到 $v_{\perp}$ 和 $v_{\perp}^{\prime}$ 之间的夹角为 \theta (注意: 不是向量 $v$ 和 $v'$ 之间的夹角为 \theta).
+还添加了一个与 $n$ 和 $v_{\perp}$ 都垂直的向量 $w$, $w$ 的长度和 $v_{\perp}$ 及 $v_{\perp}^{\prime}$ 相等.
+
+根据这些已知的关系, 我们有以下等式:
+
+
+$v_{\parallel}$ 可以看做 $v$ 在 $n$ 上的投影, 我们有:
+$$ v_{\parallel} = (v\cdot{}n)n \tag1 $$
+
+$v$ 是其平行于和垂直于 $n$ 的向量和:
+$$ v_{\perp} = v - v_{\parallel} = v - (v \cdot n)n \tag2 $$
+
+$n$ 和 $v_{\parallel}$ 平行:
+$$ n \times v_{\parallel} = 0 \tag3 $$
+
+$w$ 由 $n$ 和 $v_{\perp}$ 叉乘所得:
+$$\begin{eqnarray}
+w &=& n \times v_{\perp}                   \\\
+  &=& n \times (v - v_{\parallel} )        \\\
+  &=& n \times v - n \times v_{\parallel}  \\\
+  &=& n \times v - 0                       \\\
+  &=& n \times v                           \tag4
+\end{eqnarray}$$
+
+我们首先可以看到, $v_{\perp}^{\prime}$ 可以看做其在 $v_{\perp}$ 和 $w$ 上的投影向量之和, 所以我们有:
+$$\begin{eqnarray}
+v_{\perp}^{\prime} &=& v_{\perp}cos(\theta) + wsin(\theta) \\\
+                   &=& (v - (v \cdot n)n)cos(\theta) + (n \times v)sin(\theta)  \tag5
+\end{eqnarray}$$
+
+旋转后的向量 $v'$:
+$$\begin{eqnarray}
+v' &=& v_{\parallel} + v_{\perp}^{\prime} \\
+   &=& (v \cdot n)n + (v - (v \cdot n)n)cos(\theta) + (n \times v)sin(\theta)  \tag6
+\end{eqnarray}$$
+
+由此我们得出了任意向量 $v$ 绕单位向量 $n$ 旋转 \theta 后的向量 $v'$ 公式.
+
+我们知道
 
 * 旋转的几种表示方法
 旋转有多种表示方法, 例如轴角法, 旋转矩阵, 欧拉角, 四元数, 游戏引擎中用到了多种旋转表示方法. 我们来看看这些不同表示方法之间的联系.
