--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -215,7 +215,15 @@ v' &=& v_{\parallel} + v_{\perp}^{\prime} \\
 
 由此我们得出了任意向量 $v$ 绕单位向量 $n$ 旋转 \theta 后的向量 $v'$ 公式.
 
-我们知道
+ #+TODO 补充下下面这句的证明????
+我们知道旋转矩阵由其旋转后的坐标系的基向量组成, 我们使用上面公式(6), 就可以求解新的基向量.
+
+$$
+R(n, \theta) = \begin{bmatrix}
+p^{\prime} \\ q^{\prime} \\ r^{\prime}
+\end{bmatrix}
+$$
+
 
 * 旋转的几种表示方法
 旋转有多种表示方法, 例如轴角法, 旋转矩阵, 欧拉角, 四元数, 游戏引擎中用到了多种旋转表示方法. 我们来看看这些不同表示方法之间的联系.
