--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -217,7 +217,7 @@ v' &=& v_{\parallel} + v_{\perp}^{\prime} \\
 
 # TODO 补充下下面这句的证明????
 
-我们知道旋转矩阵由其旋转后的坐标系的基向量组成, 我们使用上面公式(6), 就可以求解新的基向量.
+我们知道旋转矩阵由其旋转后的坐标系的基向量组成, 我们使用上面公式(6), 就可以求解新的基向量以及旋转矩阵.
 
 $$
 R(n, \theta) = \begin{bmatrix}
@@ -225,15 +225,38 @@ p^{\prime} \\ q^{\prime} \\ r^{\prime}
 \end{bmatrix}
 $$
 
+#+BEGIN_QUOTE
+矩阵形式太复杂了, 暂时先不详细列出了.
+#+END_QUOTE
 
 * 旋转的几种表示方法
 旋转有多种表示方法, 例如轴角法, 旋转矩阵, 欧拉角, 四元数, 游戏引擎中用到了多种旋转表示方法. 我们来看看这些不同表示方法之间的联系.
 
 ** 旋转矩阵
+我们可以用基向量 $p, q, r$ 旋转后的基向量 $p', q', r'$ 组成 3\times{}3 旋转矩阵. 旋转矩阵为正交矩阵.
 
-** 轴角法
+正交矩阵就意味着, 其转置矩阵等于其逆矩阵, 并且转置矩阵和原矩阵乘积为单位矩阵I.
+$$ M^T = M^{-1} $$
+$$ MM^T = MM^{-1} = I $$
+
+ * 旋转矩阵的优点
+   - 矩阵形式可以方便地在物体坐标系和惯性坐标系之间旋转向量.
+   - 常见的图形学API都是使用矩阵. 无论如何存储旋转数据, 在最终渲染前都需要在某处将其转换为矩阵形式.
+   - 方便坐标系嵌套类型的计算. 只需要将矩阵依次相乘即可得到最终的旋转矩阵.
+   - 求逆向旋转方便. 逆向旋转需要逆矩阵, 而逆矩阵与转置矩阵相同, 通过简单的转置即可求得.
+
+ * 旋转矩阵的缺点
+   - 需要更多内存. 矩阵需要存储9个数字, 相比欧拉角只需要3个数字, 四元数只需要4个数字.
+   - 矩阵非常不直观, 也几乎不可能不借助计算机计算出任意方位的旋转矩阵.
+   - 矩阵可能不是合法的旋转矩阵. 矩阵蠕变可能会导致旋转矩阵不合法, 需要通过矩阵正交化解决.
+
+#+BEGIN_QUOTE     
+矩阵有9个数字组成, 这相当于给旋转矩阵带来了9个自由度. 但显然不是随意填入9个数字都能是旋转矩阵.
+旋转矩阵要求其3个行向量是单位矩阵, 并且3个行向量需要互相垂直.我们也可以理解为, 我们把三维空间的问题转化为九维空间带有六个约束的问题.
+#+END_QUOTE
 
 ** 欧拉角
+数学家欧拉证明了单个角位移可以由多个角位移组合而成.
 
 ** 四元数
 Unity在引擎内部使用四元数存储旋转和方位, 在其文档中[fn:1]有明确指出.
