--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -117,7 +117,7 @@ window.onload = function() {applet.inject('ggbApplet')};
 所以可以得到二维空间的旋转矩阵:
 
 $$
-R(\theta) = \begin{bmatrix}p' \\\ q' \\\ \end{bmatrix}
+R(\theta) = \begin{bmatrix}p' \\ q' \\ \end{bmatrix}
 = \begin{bmatrix}
 cos(\theta)  & sin(\theta) \\
 -sin(\theta) & cos(\theta) \\
@@ -149,10 +149,11 @@ R_x(\theta) = \begin{bmatrix}p' \\ q' \\ r' \\ \end{bmatrix}
 \end{bmatrix}
 $$
 
+
 同理, 我们可以很快得出绕y轴的旋转矩阵.
 
 $$
-R_y(\theta) = \begin{bmatrix} p' \\\ q' \\\ r' \\\ \end{bmatrix}
+R_y(\theta) = \begin{bmatrix} p' \\ q' \\ r' \\ \end{bmatrix}
 = \begin{bmatrix}
 cos(\theta) & 0 & -sin(\theta) \\
 0      & 1 & 0       \\
@@ -163,7 +164,7 @@ $$
 以及绕z轴的旋转矩阵.
 
 $$
-R_z(\theta) = \begin{bmatrix} p' \\\ q' \\\ r' \\\ \end{bmatrix}
+R_z(\theta) = \begin{bmatrix} p' \\ q' \\ r' \\ \end{bmatrix}
 = \begin{bmatrix}
 cos(\theta)  & sin(\theta) & 0 \\
 -sin(0) & cos(0) & 0 \\
@@ -201,17 +202,17 @@ $$ n \times v_{\parallel} = 0 \tag3 $$
 $w$ 由 $n$ 和 $v_{\perp}$ 叉乘所得:
 
 $$\begin{eqnarray}
-w &=& n \times v_{\perp}                   \\\
-  &=& n \times (v - v_{\parallel} )        \\\
-  &=& n \times v - n \times v_{\parallel}  \\\
-  &=& n \times v - 0                       \\\
+w &=& n \times v_{\perp}                   \\
+  &=& n \times (v - v_{\parallel} )        \\
+  &=& n \times v - n \times v_{\parallel}  \\
+  &=& n \times v - 0                       \\
   &=& n \times v                           \tag4
 \end{eqnarray}$$
 
 我们首先可以看到, $v_{\perp}^{\prime}$ 可以看做其在 $v_{\perp}$ 和 $w$ 上的投影向量之和, 所以我们有:
 
 $$\begin{eqnarray}
-v_{\perp}^{\prime} &=& v_{\perp}cos(\theta) + wsin(\theta) \\\
+v_{\perp}^{\prime} &=& v_{\perp}cos(\theta) + wsin(\theta) \\
                    &=& (v - (v \cdot n)n)cos(\theta) + (n \times v)sin(\theta)  \tag5
 \end{eqnarray}$$
 
