update for blog

--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -34,7 +34,9 @@
 
 [[file:2022-06/2022-06-Rotation-002.Plane-Basic-Rotation.gif]]
 
-PS: X,Y,Z轴的颜色正好和三原色Red,Green,Blue对应. 在游戏开发中我们还能在其他地方也看到这种对应关系.
+#+BEGIN_QUOTE
+X,Y,Z轴的颜色正好和三原色Red,Green,Blue对应. 在游戏开发中我们还能在其他地方也看到这种对应关系.
+#+END_QUOTE
 
 ** 当X轴旋转\plusmn{}90\deg{}时
 我们先在Inspector中将飞机绕X轴旋转90\deg, 这时再操作Y轴与Z轴, 我们可以惊奇地发现, 旋转效果 =似乎= 是完全一致的.
@@ -256,6 +258,7 @@ $$ MM^T = MM^{-1} = I $$
 
 ** 欧拉角
 数学家欧拉证明了单个角位移可以由多个角位移组合而成.
+
 
 *** 旋转顺序
 ** 四元数
