update for blog

--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -257,10 +257,12 @@ $$ MM^T = MM^{-1} = I $$
 #+END_QUOTE
 
 ** 欧拉角
-数学家欧拉证明了单个角位移可以由多个角位移组合而成.
-
+数学家欧拉证明了单个角位移可以由多个角位移组合而成. 
 
 *** 旋转顺序
+必须明确旋转顺序, 指定其旋转轴???? Unity的旋转顺序???
+*** 固定轴和动态轴
+*** 角度范围
 ** 四元数
 Unity在引擎内部使用四元数存储旋转和方位, 在其文档中[fn:1]有明确指出.
 
