--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -264,8 +264,15 @@ $$ MM^T = MM^{-1} = I $$
 *** 固定轴和动态轴
 *** 角度范围
 ** 四元数
+*** 复数和旋转
+可以从复数的角度理解复数 $i$. 将数字 $1$ 旋转90\deg, 可以得到 $1i = i$, 继续旋转90\deg, 可以得到 $i*i=-1$.
+
+[[file:2022-06/2022-06-Rotation-008.i-Rotation.png]]
+
+*** Unity与四元数
 Unity在引擎内部使用四元数存储旋转和方位, 在其文档中[fn:1]有明确指出.
 
+Unity提供了 =Quaternion= 类, 用于相关操作.
 
 
 * 参考文档
