--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -405,6 +405,14 @@ $$ki = j = -ik$$
 
      四元数叉乘的逆等于各个四元数的逆以相反的顺序相乘.
      $$(ab)^{-1} = b^{-1}a^{-1}$$
+   - 叉乘和旋转
+
+     假设有三维点 $(x, y, z)$, 可以扩展为四元数 $p = [0, (x, y, z)]$.
+     设 $q=[\cos{\frac{\theta}{2}}, n\sin{\frac{\theta}{2}}]$, 其中 $n$ 是单位向量作为旋转轴, $\theta$ 为旋转角.
+     下面公式可以表示 $p$ 绕 $n$ 旋转 $\theta$:
+     $$ p\prime = qpq^{-1}$$
+
+     
 *** 四元数与点
 
 *** 四元数的优点
