--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -422,6 +422,58 @@ $$ki = j = -ik$$
 
      可以通过改变四元数叉乘的定义, 来反转乘法顺序. 此时并没有改变四元数的基本性质和几何解释.
      $$[w_1, v_1][w_2, v_2] = [w_1w_2 - v_1\cdot{}v_2, w_1v_2 +w_2v_1+v_1\cdot{}v_2]$$
+
+     调整叉乘定义后, 旋转定义如下:
+     $$p\prime = q^{-1}pq$$
+
+     连续旋转乘法和旋转发生顺序一致:
+     $$\begin{eqnarray}
+     p\prime &=& b^{-1}(a^{-1}pa)b \\
+             &=& (b^{-1}a^{-1})p(ab) \\
+	     &=& (ab)^{-1}p(ab)
+     \end{eqnarray}$$
+   - 四元数的差
+
+     利用给定方位 $a$ 和 $b$, 求出 $a$ 到 $b$ 的旋转角位移 $d$. $d$ 被定义为 $a$ 到 $b$ 的差.
+     $$\begin{eqnarray}ad &=& b \\
+     a^{-1}(ad) &=& a^{-1}b \\
+     (a^{-1}a)d &=& a^{-1}b \\
+     [1, \vec{0}]d &=& a^{-1}b \\
+     d &=& a^{-1}b
+     \end{eqnarray}$$
+     
+     在数学上, 两个四元数之间的差更类似于除法, 而不是普通代数意义上的减法.
+   - 四元数的点乘
+     $$\begin{eqnarray} q_1 q_2 &=& [w_1, v_1][w_2, v_2] = w_1 w_2 + v_1 \cdot v_2 \\
+     &=& [w_1, (x_1, y_1, z_1)][w_2, (x_2, y_2, z_2)] = w_1 w_2 + x_1 x_2 + y_1 y_2 + z_1 z_2
+     \end{eqnarray}$$
+
+     点乘的结果为标量. 
+     对于单位四元数 $q_1$ $q_2$, $ -1 \le q_1 \cdot q_2 \le 1$.
+
+     通常只关心点乘的绝对值, 因为 $q_1 \cdot q_2 = -(q_1 \cdot -q_2)$. $q_1 \cdot q_2$ 的绝对值越大说明其代表的角位移越相似.
+
+   - 四元数的对数, 指数
+
+     设有 $\alpha = \frac{\theta}{2}$, 单位向量 $n$. 有四元数:
+     $$q =\begin{bmatrix} \cos\alpha & n\sin\alpha \end{bmatrix}$$
+     $q$ 的对数定义为:
+     $$\log{q} = \log(\begin{bmatrix}\cos{\alpha} & n\sin(\alpha)\end{bmatrix}) = \begin{bmatrix}0 & \alpha{}n\end{bmatrix}$$
+
+     四元数的指数以相反方式定义. 有四元数 $q = [0, \alpha{}n]$. 则有:
+     $$exp(p) = exp([0, \alpha{}n]) = [\cos\alpha, n\sin\alpha]$$
+
+     我们可以看到对于四元数而言, 对数和指数依然是互为逆运算.
+     $$exp(log(q)) = q$$
+   - 标量乘运算
+
+     标量乘运算定义为每个分量乘以标量.
+     $$\begin{eqnarray} kq &=& k[w, v] = [kw, kv] \\
+     &=& k[w, (x, y, z)] = [kw, (kx, ky, kz)]
+     \end{eqnarray}$$
+   - 四元数的幂
+
+     
 *** 四元数与点
 
 *** 四元数的优点
