--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -473,7 +473,17 @@ $$ki = j = -ik$$
      \end{eqnarray}$$
    - 四元数的幂
 
-     
+     四元数作为底数, 记作 $q^t$. 当 $t$ 从0到1变化时, $q^t$ 从 $[1, \vec{0}]$ 到 $q$.
+
+     因为四元数总是使用最短圆弧, 当 $t$ 的范围超出 [0, 1] 时, 代表的可能是短圆弧.
+     例如, $q$ 代表绕坐标轴顺时针旋转30\deg. 那么 $q^2$ 代表顺时针旋转60\deg, $q^{-\frac{1}{3}}$ 代表逆时针旋转10\deg.
+     $q^8$ 则不是代表顺时针旋转240\deg, 而是逆时针旋转80\deg, 走了短圆弧.
+
+     代数中的 $(a^s)^t = a^{st}$ 对四元数不适用. 
+
+     $$q^t = exp(t\log(q))$$
+*** 四元数插值(slerp)
+
 *** 四元数与点
 
 *** 四元数的优点
