--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -483,6 +483,7 @@ $$ki = j = -ik$$
    - 四元数的幂
 
      四元数作为底数, 记作 $q^t$. 当 $t$ 从0到1变化时, $q^t$ 从 $[1, \vec{0}]$ 到 $q$.
+     此时得到 $q^t$ 相当于 $q$ 的一部分.
 
      因为四元数总是使用最短圆弧, 当 $t$ 的范围超出 [0, 1] 时, 代表的可能是短圆弧.
      例如, $q$ 代表绕坐标轴顺时针旋转30\deg. 那么 $q^2$ 代表顺时针旋转60\deg, $q^{-\frac{1}{3}}$ 代表逆时针旋转10\deg.
@@ -492,6 +493,28 @@ $$ki = j = -ik$$
 
      $$q^t = exp(t\log(q))$$
 *** 四元数插值(slerp)
+球面线性插值(Spherical Linear Interpolation)缩写为 slerp, 可以在两个四元数之间做平滑插值. 公式为:
+$$q = slerp(q_0, q_1, t)$$
+t在0到1之间变换.
+
+计算插值一般需要先计算出两个值的差, 并乘以系数t, 加上初始值就是我们需要的插值. 四元数也是如此.
+
+四元数插值步骤如下:
+   - 计算 $q_0$ 和 $q_1$ 的插值.
+     $$\Delta{} q = q^{-1}_0 q_1$$
+   - 计算 $\Delta{}q$ 和 $t$ 相关的部分.
+
+     $t$ 在 [0, 1]之间变换, 获取 $\Delta{}q$ 的一部分, 恰好是计算四元数幂的操作.
+
+     $$(\Delta{}q)^t$$
+
+   - 计算初始值加上差的一部分.
+
+     对旋转四元数来说, 需要用乘法把两次旋转组合成新的旋转四元数.
+     $$q_0(\Delta{}q)^t$$
+     
+最终得到的slerp插值公式如下:
+$$slerp(q_0, q_1, t) = q_0(\Delta{}q)^t = q_0(q^{-1}_0 q_1)^t$$
 
 *** 四元数与点
 
