--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -329,6 +329,7 @@ $$ki = j = -ik$$
 
    只看实数部分, 单位四元数的平方为 -1.
    
+   所有的旋转都是单位四元数.
  * 纯四元数
 
    标量分量为0的四元数称为纯四元数.
@@ -519,6 +520,8 @@ t在0到1之间变换.
 $$slerp(q_0, q_1, t) = q_0(\Delta{}q)^t = q_0(q^{-1}_0 q_1)^t$$
 
 # https://www.geogebra.org/calculator/hjz2ekxf
+
+
 
  * 小角度插值
    如果只对四元数做简单线性插值(Lerp), 得到的可能就不是一个单位四元数.
