--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -519,9 +519,48 @@ t在0到1之间变换.
 最终得到的slerp插值公式如下:
 $$slerp(q_0, q_1, t) = q_0(\Delta{}q)^t = q_0(q^{-1}_0 q_1)^t$$
 
+上面的推导过程是按照代数的方法推导的.
+
+我们可以在四维空间中解释四元数. 旋转四元数都是单位四元数, 它们都在四维的一个超球面上.
+
+slerp的基本思想就是在四维超球面上沿连接两个四元数的四维超弧上做插值, 这也是球面线性插值这个名称的来历.
+
+可以从二维关系类比四维的情形.
+[[file:2022-06/2022-06-Rotation-009.2D-Slerp.png]]
 # https://www.geogebra.org/calculator/hjz2ekxf
 
+图中 $v_0, v_1, v_t$ 都是单位向量, 其模都为1:
+$$\lVert v_0 \rVert = \lVert v_1 \rVert = \lVert v_t \rVert = 1$$
 
+图中 $k_1v_1$ 和 $v_1$ 平行, 所以有:
+$$k_0v_0 + k_1v_1 = v_t$$
+
+在三角形 $AOB$ 中有:
+$$\sin(t\theta) = \frac{AB}{\lVert v_t \rVert} = AB$$
+
+在三角形 $ACB$ 中有:
+$$\sin(\theta) = \frac{AB}{\lVert k_1v_1 \rVert} = \frac{AB}{k_1}$$
+
+由上面两个式子可以得出:
+$$k_1 = \frac{\sin(t\theta)}{\sin(\theta)}$$
+
+继续求解 $k_0$:
+$$\lVert k_0v_0 \rVert = k_0 = OC = OB - BC = \lVert v_t \rVert \cos(t\theta) - k_1cos(\theta) = cos(t\theta) - k_1cos(\theta)$$
+
+代入 $k_1$ 并化简, 这里会使用一次三角函数和公式 $\sin(\alpha - \beta) = \sin(\alpha)\cos(\beta) - cos(\alpha)sin(\beta)$:
+$$\begin{eqnarray}
+k_0 &=& cos(t\theta) - k_1cos(\theta) \\
+    &=& cos(t\theta) - \frac{\cos(\theta)\sin(t\theta)}{sin(\theta)} \\
+    &=& \frac{\sin(\theta)\cos(t\theta) - cos(\theta)\sin(t\theta)}{\sin(\theta)}  \\
+    &=& \frac{\sin(\theta - t\theta)}{\sin(\theta)} \\
+    &=& \frac{\sin((1-t)\theta)}{\sin(\theta)} 
+\end{eqnarray}$$
+
+最终我们得到:
+$$v_t = k_0v_0 + k_1v_1 = \frac{\sin((1-t)\theta)}{\sin(\theta)}v_0 + \frac{\sin(t\theta)}{\sin(\theta)}v_1$$
+
+推广到四元数有:
+$$slerp(q_0, q_1, t) = \frac{\sin((1-t)\theta)}{\sin(\theta)}q_0 + \frac{\sin(t\theta)}{\sin(\theta)}q_1$$
 
  * 小角度插值
    如果只对四元数做简单线性插值(Lerp), 得到的可能就不是一个单位四元数.
@@ -535,6 +574,7 @@ $$slerp(q_0, q_1, t) = q_0(\Delta{}q)^t = q_0(q^{-1}_0 q_1)^t$$
    在小角度插值时, Slerp可能会因sin带来除0的问题, 所以可以在小角度时替换为NLerp插值.
    NLerp计算更为简单, 在小角度插值时, 相较Slerp误差也并不大, 可以作为一种Slerp的优化手段.
 
+   
 *** 四元数与点
 
 *** 四元数的优点
