--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -574,7 +574,8 @@ $$slerp(q_0, q_1, t) = \frac{\sin((1-t)\theta)}{\sin(\theta)}q_0 + \frac{\sin(t\
    在小角度插值时, Slerp可能会因sin带来除0的问题, 所以可以在小角度时替换为NLerp插值.
    NLerp计算更为简单, 在小角度插值时, 相较Slerp误差也并不大, 可以作为一种Slerp的优化手段.
 
-   
+*** 四元数样条
+
 *** 四元数与点
 
 *** 四元数的优点
