--- a/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
+++ b/org/2022-06-08-Unity-Rotation-Euler-Quaternion.org
@@ -291,6 +291,8 @@ Unity使用 =ZXY= 顺序.
 
  * 复数可以看作两元数???
  * 三元数???
+*** 复数与欧拉旋转定理???
+
 *** 四元数的由来
 $$i^2 = j^2 = k^2 = ijk = -1$$
 $$ij = k = -ji$$
@@ -343,6 +345,7 @@ $$ki = j = -ik$$
    标量分量为0的四元数称为纯四元数.
    
 *** 四元数的运算
+ * 加减法
  * 模
 
    模也被称作范数.
@@ -585,8 +588,8 @@ $$slerp(q_0, q_1, t) = \frac{\sin((1-t)\theta)}{\sin(\theta)}q_0 + \frac{\sin(t\
 *** 四元数样条-squad
 slerp可以提供两个方位之间的插值, 并且可以保持插值的角速度固定. 当我们使用slerp给多个方位之间插值时, 插值的角速度会在中间方位处发生突变.
 
-
-
+*** 四元数映射-实数??
+*** 四元数映射-矢量映射???
 
 
 *** 四元数与点
